--- a/Day-1/index.html
+++ b/Day-1/index.html
@@ -1,49 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Business Letter</title>
-</head>
-<body>
-    <h1>Sample Business Letter</h1>
+  </head>
+  <body>
+    <h1>Letter For Permission</h1>
     <p>
-        Ken's Cheese House<br>
-        34 Chatley Avenue<br>
-        Seattle, WA 98765
+      The Dean,<br />
+      Mr Aswarth,<br />
+      BIT Bangalore,<br />
+      Bangalore.
     </p>
 
-    <p>October 23,2017</p>
+    <p>June 23,2021</p>
 
+    <h4>Letter: Letter for Permission</h4>
+    <p>Respected sir,</p>
     <p>
-        Fred Flintstone<br>
-        Sales Manager<br>
-        Cheese Specialists Inc.<br>
-        466 Rubble Road<br>
-        Rockville, IL 78777<br>
+      I, Meda Bhuvanesh,student of ECE, I have recently joined Devsnest
+      Codecamp. It goes for a month and iam intersted in participating the
+      codecamp. Codecamp is orginsing many events on various coding languages
+      and web development. The various courses provided are:
     </p>
-    <p>
-        Dear Mr. Flintstone,</p>
-    <p>
-        With reference to our <u>telephone conversation</u> today, I am writing to confirm your order for:120 x Cheddar Deluxe Ref. No. 856.
+    <table>
+      <tr>
+        <th>Course</th>
+        <th>Details</th>
+      </tr>
+      <tr>
+        <td>HTML</td>
+        <td>Intro of HTML</td>
+      </tr>
+      <tr>
+        <td>CSS</td>
+        <td>Intro of CSS</td>
+      </tr>
+      <tr>
+        <td>JavaScript</td>
+        <td>Intro of JavaScript</td>
+      </tr>
+    </table>
+    <p>Benefits:
+      <ol>
+        <li>Learn Web Development</li>
+        <li>Data Structures</li>
+        <li>Communication skills</li>
+      </ol>
     </p>
- 
+    <p>Please permit to attend the course.</p>
     <p>
-        The order will be shipped within threre days via UPS and should arrive at your store in about 10 days.
+      Yours sincerely,<br />
+      Meda Bhuvanesh
     </p>
- 
-    <p>
-        Please contact us again if we can help in any way.
-    </p>
-    <p>
-        Yours sincerely,<br>
-        Kenneth Beare<br>
-        Director of Ken's Cheese House
-    </p>
-
-</body>
-</html> 
-
-
-
+  </body>
+</html>
