--- a/Day-1/index.html
+++ b/Day-1/index.html
@@ -17,12 +17,12 @@
 
     <p>June 23,2021</p>
 
-    <h4>Letter: Letter for Permission</h4>
+    <h4><span>Subject:</span>Letter for Permission</h4>
     <p>Respected sir,</p>
     <p>
       I, Meda Bhuvanesh,student of ECE, I have recently joined Devsnest
       Codecamp. It goes for a month and iam intersted in participating the
-      codecamp. Codecamp is orginsing many events on various coding languages
+      codecamp. <br>Codecamp is orginsing many events on various coding languages
       and web development. The various courses provided are:
     </p>
     <table>
@@ -57,3 +57,4 @@
     </p>
   </body>
 </html>
+
