--- a/DAY-8/index.html
+++ b/DAY-8/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Day-8</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DAY-8</title>
-</head>
-<body>
-    <div class="frame">
-        <div class="box">
-            <div class="center">
-                <div class="header">
-                    <p> Drop file to upload </p>
-                </div>
-                <div class="drop-zone">
-                    <img src="https://100dayscss.com/codepen/upload.svg" class="icon">
-                </div>
-                <div class="button">
-                    <p>Upload file</p>
-                </div>
+  <body>
+    <body>
+      <div class="frame">
+        <div class="center">
+          <div class="header">
+            <span class="title">Drop file upload</span>
+          </div>
+          <div class="content">
+            <div class="border">
+              <img src="https://100dayscss.com/codepen/upload.svg" class="upload">
             </div>
+          </div>
+          <div class="footer">
+            <button type="button">Upload file</button>
+          </div>	
         </div>
-    </div>
-</body>
+      </div>
+    </body>
 </html>
+
